switch db to postgres